# opensearch-py

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .pylintrc  .readthedocs.yml  ADMINS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  MAINTAINERS.md  MANIFEST.in  Makefile  README.html  README.md  README.rst  RELEASING.md  UPGRADING.md  USER_GUIDE.md  api-ref.html  bulk_request.py  client_upload.py  dev-requirements.txt  genindex.html  index.html  noxfile.py  objects.inv  py_client_contents  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  upgrading.md  upload_file.py
.ci/: Dockerfile.client  Dockerfile.grpc  Dockerfile.opendistro.no.security.plugin  make.sh  run-elasticsearch.sh  run-opensearch.sh  run-repository.sh  run-tests  test-matrix.yml
.ci/functions/: cleanup.sh  imports.sh
.ci/license/: check-license-headers.sh  license-mc.txt  license-sc.txt
.ci/opendistro/: Dockerfile
.ci/opensearch/: Dockerfile  docker-compose.yml  grpc-entrypoint.sh  opensearch-run.sh
.github/: CODEOWNERS  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_TEMPLATE.md  FEATURE_REQUEST_TEMPLATE.md  PROPOSAL_TEMPLATE.md
.github/workflows/: .lychee.excludes  add-untriaged.yml  backport.yml  build_deploy_doc.yml  changelog_verifier.yml  ci.yml  dco.yml  delete_backport_branch.yml  dependabot_pr.yml  docs.yml  integration-opendistro.yml  integration-unreleased.yml  integration.yml  licenseheader.yml  links.yml  main.yml  release-drafter.yml  test.yml  unified-release.yml  update_api.yml
_modules/: index.html
_modules/opensearchpy/: client.html  connection_pool.html  exceptions.html  serializer.html  transport.html
_sources/: index.md.txt
_sources/api-ref/: client.md.txt  connection.md.txt  helpers.md.txt  plugins.md.txt  serializer.md.txt
api-ref/: client.html  connection.html  connection_pool.html  exceptions.html  helpers.html  metrics.html  plugins.html  serializer.html  transport.html
api-ref/clients/: cat_client.html  cluster_client.html  dangling_indices_client.html  features_client.html  http_client.html  indices_client.html  ingest_client.html  nodes_client.html  opensearch_client.html  remote_client.html  security_client.html  snapshot_client.html  tasks_client.html
benchmarks/: README.md  bench_async.py  bench_info_sync.py  bench_sync.py  bench_sync_async.py  poetry.toml  pyproject.toml  thread_with_return_value.py
data/: sample_logs.csv  sample_products.json
docs/: Makefile  grpc_transport.md  make.bat  simpledoc_gRPC.md  test_client_operations.md  test_simpledoc.md  translation_layer_bulk_request.md
elasticsearch/: __init__.py  __init__.pyi  _version.py  compat.py  connection_pool.py  connection_pool.pyi  exceptions.py  exceptions.pyi  serializer.py  transport.py  transport.pyi  utils.pyi
guides/: advanced_index_actions.md  async.md  auth.md  bulk.md  connection_classes.md  document_lifecycle.md  dsl.md  index_lifecycle.md  index_template.md  json.md  log_collection.md  point_in_time.md  proxy.md  search.md  snapshot.md  snapshots.md  ssl.md
jenkins/: release.JenkinsFile
junit/: opensearch-py-junit.xml
openapi_spec/: opensearch.openapi.yaml
opensearch/: __init__.py  _version.py  connection_pool.py  exceptions.py  exceptions.pyi  serializer.py  transport.py  utils.py
opensearch_grpc/: grpc_transport.py  proto_adapter.py  simpledoc_gRPC.py  stream_client.py  translation.py
opensearchpy/: .pylintrc  __init__.py  __init__.pyi  _version.py  compat.py  compat.pyi  connection_pool.py  connection_pool.pyi  exceptions.py  exceptions.pyi  metrics.py  serializer.py  serializer.pyi  transport.py  transport.pyi
samples/: Dockerfile  README.md  pyproject.toml
samples/advanced_index_actions/: advanced_index_actions_sample.py
samples/aws/: README.md  search-requests.py  search-urllib3.py  search_after.py  search_requests.py  search_urllib3.py  search_urllib3_async.py
samples/benchmarks/: README.md  bench_async.py  bench_info_sync.py  bench_sync.py  bench_sync_async.py  pyproject.toml  thread_with_return_value.py
samples/bulk/: bulk-array.py  bulk-helpers.py  bulk-ld.py  bulk_array.py  bulk_helpers.py  bulk_ld.py
samples/document_lifecycle/: document_lifecycle_sample.py
samples/hello/: hello-async.py  hello.py  hello_async.py  unicode.py  unicode_async.py
samples/index_template/: index_template_sample.py
samples/json/: hello-async.py  hello.py  json-hello-async.py  json-hello.py  json_hello.py  json_hello_async.py
samples/knn/: knn-async-basics.py  knn-basics.py  knn-boolean-filter.py  knn-efficient-filter.py  knn_async_basics.py  knn_basics.py  knn_boolean_filter.py  knn_efficient_filter.py
samples/logging/: log_collection_sample.py
samples/search/: search_after_async.py  search_after_sync.py
samples/security/: roles.py  users.py
samples/sigv4/: README.md  requests-hello.py  urllib3-hello.py
samples/snapshot/: Dockerfile  README.md  snapshot_sample.py
test_elasticsearch/: run_tests.py  test_cases.py  test_connection.py  test_connection_pool.py  test_exceptions.py  test_helpers.py  test_serializer.py  test_transport.py  test_utils.py  utils.py
test_opensearch/: run_tests.py  test_cases.py  test_connection.py  test_connection_pool.py  test_exceptions.py  test_helpers.py  test_serializer.py  test_transport.py  test_utils.py  utils.py
test_opensearchpy/: .pylintrc  TestHttpServer.py  __init__.py  run_tests.py  test_async_http_connection.py  test_cases.py  test_connection.py  test_connection_pool.py  test_exceptions.py  test_grpc_basic_auth.py  test_grpc_exceptions.py  test_grpc_jwt.py  test_grpc_jwt_integration.py  test_grpc_sigv4.py  test_grpc_sigv4_integration.py  test_grpc_tls_unit.py  test_helpers.py  test_http_server.py  test_serializer.py  test_transport.py  utils.py
utils/: build-dists.py  build_dists.py  changelog_updater.py  disable_pylint_check.py  generate-api.py  generate_api.py  generate_types.py  generated_file_headers.txt  license-headers.py  license_headers.py  new-gen-api.py  new-gen2_test.py  type_naming.py
(+1147 files in other folders)
