[build-system]
requires = ["setuptools==71.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensearch-py"
description = "Python client for OpenSearch"
readme = "README.md"
requires-python = ">=3.8,<4"
license = { text = "Apache-2.0" }
authors = [
  { name = "Aleksei Atavin", email = "axeo@aiven.io" },
  { name = "Denis Zalevskiy", email = "dez@aiven.io" },
  { name = "Rushi Agrawal", email = "rushi.agr@gmail.com" },
  { name = "Shephali Mittal", email = "shephalm@amazon.com" },
]
maintainers = [
  { name = "Aleksei Atavin", email = "axeo@aiven.io" },
  { name = "Denis Zalevskiy", email = "dez@aiven.io" },
  { name = "Rushi Agrawal", email = "rushi.agr@gmail.com" },
  { name = "Shephali Mittal", email = "shephalm@amazon.com" },
]
dynamic = ["version"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  'urllib3>=1.26.19,<1.27; python_version < "3.10"',
  'urllib3>=1.26.19,!=2.2.0,!=2.2.1,<3; python_version >= "3.10"',
  "requests>=2.32.0,<3.0.0",
  "python-dateutil",
  "certifi>=2024.07.04",
  "Events",
]

[project.optional-dependencies]
tests = [
  "requests>=2.0.0,<3.0.0",
  "coverage<8.0.0",
  "pyyaml",
  "pytest>=3.0.0",
  "pytest-cov",
  "pytz",
  "botocore",
  "pytest-mock<4.0.0",
]
async = [
  "aiohttp>=3.10.11,<4",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst_parser",
  "sphinx_copybutton",
  # re-add async dependencies
  "aiohttp>=3.10.11,<4",
]
develop = [
  "black>=24.3.0",
  "jinja2",
  # re-add tests dependencies
  "requests>=2.0.0,<3.0.0",
  "coverage<8.0.0",
  "pyyaml",
  "pytest>=3.0.0",
  "pytest-cov",
  "pytz",
  "botocore",
  "pytest-mock<4.0.0",
  # re-add docs dependencies
  "sphinx",
  "sphinx_rtd_theme",
  "myst_parser",
  "sphinx_copybutton",
  # re-add async dependencies
  "aiohttp>=3.10.11,<4",
]
kerberos = ["requests_kerberos"]

[project.urls]
Documentation = "https://opensearch.org/docs/clients/python"
Source = "https://github.com/opensearch-project/opensearch-py"
"Issue Tracker" = "https://github.com/opensearch-project/opensearch-py/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"opensearchpy" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "opensearchpy._version.__versionstr__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["opensearchpy*"]
exclude = ["test_opensearchpy*"]
